Upgrade pulumi-terraform-bridge to v3.129.2 (#1111)
This PR was generated via `$ upgrade-provider
pulumi/pulumi-confluentcloud --kind=bridge
--pr-reviewers=guineveresaenger --allow-missing-docs=false`.

---

- Upgrading pulumi-terraform-bridge from v3.128.0 to v3.129.2.